force-app/main/default/objects/Lead/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <formula>TEXT(  Account__r.Category__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Category</label>
    <type>Text</type>
</CustomField>