force-app/main/default/objects/Lead/fields/AllowConversion__c.field-meta.xml
<CustomField>
    <fullName>AllowConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Conversion</label>
    <type>Checkbox</type>
</CustomField>