force-app/main/default/objects/Lead/fields/Annual_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_USD__c</fullName>
    <label>Annual Revenue USD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-100 MM</fullName>
            </value>
            <value>
                <fullName>101 - 249 MM</fullName>
            </value>
            <value>
                <fullName>250 - 500 MM</fullName>
            </value>
            <value>
                <fullName>&gt; 500 MM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>