force-app/main/default/objects/Lead/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate if the decision-making requires approval or support from another role</inlineHelpText>
    <label>Approval Needed</label>
    <type>Checkbox</type>
</CustomField>