force-app/main/default/objects/Lead/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>