force-app/main/default/objects/Lead/fields/CC_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>CC_Preferred_Language__c</fullName>
    <description>Custom field to select the preferred language for marketing communications.</description>
    <inlineHelpText>Select the Lead&apos;s preferred language for marketing communications.</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Language</valueSetName>
    </valueSet>
</CustomField>