force-app/main/default/objects/Lead/fields/Compelling_Reason_to_Act__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Reason_to_Act__c</fullName>
    <label>Compelling Reason to Act</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>