force-app/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>TEXT(  Account__r.Country__c  )</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>