force-app/main/default/objects/Lead/fields/Current_Reconciliation_Process__c.field-meta.xml
<CustomField>
    <fullName>Current_Reconciliation_Process__c</fullName>
    <description>Number of gateways, acquirers, banks and countries they work with</description>
    <inlineHelpText>Number of gateways, acquirers, banks and countries they work with</inlineHelpText>
    <label>Current Reconciliation Process</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>