force-app/main/default/objects/Lead/fields/Data_Extraction_Methods__c.field-meta.xml
<CustomField>
    <fullName>Data_Extraction_Methods__c</fullName>
    <description>Current Data Extraction Methods</description>
    <inlineHelpText>Current Data Extraction Methods</inlineHelpText>
    <label>Data Extraction Methods</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>