force-app/main/default/objects/Lead/fields/Date_Habeas_Data__c.field-meta.xml
<CustomField>
    <fullName>Date_Habeas_Data__c</fullName>
    <label>Date Habeas Data</label>
    <type>Date</type>
</CustomField>