force-app/main/default/objects/Lead/fields/Deepmeet__c.field-meta.xml
<CustomField>
    <fullName>Deepmeet__c</fullName>
    <label>Deepmeet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>