force-app/main/default/objects/Lead/fields/Dismeet__c.field-meta.xml
<CustomField>
    <fullName>Dismeet__c</fullName>
    <label>Dismeet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>