force-app/main/default/objects/Lead/fields/Dominio_Lead__c.field-meta.xml
<CustomField>
    <fullName>Dominio_Lead__c</fullName>
    <formula>IF(CreatedBy.Dominio_Usuario__c =  $User.Dominio_Usuario__c   ||   $User.Dominio_Usuario__c = &quot;simetrik.com&quot; ||   $User.Dominio_Usuario__c = &quot;clouderconsulting.com&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dominio Lead</label>
    <type>Checkbox</type>
</CustomField>