force-app/main/default/objects/Lead/fields/Fit_to_ICP__c.field-meta.xml
<CustomField>
    <fullName>Fit_to_ICP__c</fullName>
    <description>Please give the reason why this leads fits with Simetrik ICP</description>
    <inlineHelpText>Please give the reason why this leads fits with Simetrik ICP</inlineHelpText>
    <label>Fit to ICP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>