force-app/main/default/objects/Lead/fields/Gong__Actively_Being_in_a_Flow__c.field-meta.xml
<CustomField>
    <fullName>Gong__Actively_Being_in_a_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently in Engage Flow</label>
    <type>Checkbox</type>
</CustomField>