force-app/main/default/objects/Lead/fields/Identified_need_for_Simetrik__c.field-meta.xml
<CustomField>
    <fullName>Identified_need_for_Simetrik__c</fullName>
    <label>Identified need for Simetrik</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>