force-app/main/default/objects/Lead/fields/Industrys__c.field-meta.xml
<CustomField>
    <fullName>Industrys__c</fullName>
    <formula>TEXT( Account__r.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industrys</label>
    <type>Text</type>
</CustomField>