force-app/main/default/objects/Lead/fields/Lead_Country__c.field-meta.xml
<CustomField>
    <fullName>Lead_Country__c</fullName>
    <label>Lead Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>