force-app/main/default/objects/Lead/fields/lep360learning__user_deletion_date__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__user_deletion_date__c</fullName>
    <label>360Learning user deletion date</label>
    <type>Date</type>
</CustomField>