force-app/main/default/objects/Lead/fields/lep360learning__X360Learning_user_deletion_date__c.field-meta.xml
<CustomField>
    <fullName>lep360learning__X360Learning_user_deletion_date__c</fullName>
    <label>deprecated</label>
    <type>Date</type>
</CustomField>