force-app/main/default/objects/Lead/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Market</fullName>
            </value>
            <value>
                <fullName>Secondary Market</fullName>
            </value>
            <value>
                <fullName>High Potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>