force-app/main/default/objects/Lead/fields/Massive__c.field-meta.xml
<CustomField>
    <fullName>Massive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the lead was converted in bulk due to the conversion of a lead from the same account</inlineHelpText>
    <label>Massive</label>
    <type>Checkbox</type>
</CustomField>