force-app/main/default/objects/Lead/fields/Named_List__c.field-meta.xml
<CustomField>
    <fullName>Named_List__c</fullName>
    <formula>TEXT( Account__r.Named_List__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Named List</label>
    <type>Text</type>
</CustomField>