force-app/main/default/objects/Lead/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <label>Need</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>