force-app/main/default/objects/Lead/fields/No_Conversion_Causes__c.field-meta.xml
<CustomField>
    <fullName>No_Conversion_Causes__c</fullName>
    <label>No Conversion Causes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account data incomplete</fullName>
            </value>
            <value>
                <fullName>Not a decision maker</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>No use case hypothesis identified</fullName>
            </value>
            <value>
                <fullName>Bying process unknown</fullName>
                <label>Buying process unknown</label>
            </value>
            <value>
                <fullName>Bying time &gt; 6 months</fullName>
                <label>Buying time &gt; 6 months</label>
            </value>
            <value>
                <fullName>No ICP</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>