force-app/main/default/objects/Lead/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <description>Returns the email of the Owner of the Lead.</description>
    <formula>Owner:User.Email</formula>
    <inlineHelpText>Returns the email of the Owner of the Lead.</inlineHelpText>
    <label>OwnerEmail</label>
    <type>Text</type>
</CustomField>