force-app/main/default/objects/Lead/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <description>Owner Name</description>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the name of the Owner of the Lead.</inlineHelpText>
    <label>OwnerName</label>
    <type>Text</type>
</CustomField>