force-app/main/default/objects/Lead/fields/OwnerValidation__c.field-meta.xml
<CustomField>
    <fullName>OwnerValidation__c</fullName>
    <formula>IF($User.Id = Owner:User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerValidation</label>
    <type>Checkbox</type>
</CustomField>