force-app/main/default/objects/Lead/fields/Partnership_for_this_lead__c.field-meta.xml
<CustomField>
    <fullName>Partnership_for_this_lead__c</fullName>
    <label>Partnership for this lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>CoSelling</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>CoSelling + Implementation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>