force-app/main/default/objects/Lead/fields/Potential_Partner__c.field-meta.xml
<CustomField>
    <fullName>Potential_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check this box to indicate that the lead is identified as a potential partner</inlineHelpText>
    <label>Potential Partner</label>
    <type>Checkbox</type>
</CustomField>