force-app/main/default/objects/Lead/fields/Reconciliation_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Challenges__c</fullName>
    <description>Which kind of sales channels (collection) or Settlements do they have?</description>
    <inlineHelpText>Which kind of sales channels (collection) or Settlements do they have?</inlineHelpText>
    <label>Recoinciliation Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>