force-app/main/default/objects/Lead/fields/Rejection_cause__c.field-meta.xml
<CustomField>
    <fullName>Rejection_cause__c</fullName>
    <label>Rejection cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned to another partner</fullName>
            </value>
            <value>
                <fullName>Partner can´t help</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>