force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>Indicate the role that this person will have in the development of the business</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Functional Decision Maker</fullName>
            </value>
            <value>
                <fullName>Technical Decision Maker</fullName>
            </value>
            <value>
                <fullName>Economic Decision Maker</fullName>
            </value>
            <value>
                <fullName>Evaluator</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Business User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>