force-app/main/default/objects/Lead/fields/Strategic_Value_Levers__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Value_Levers__c</fullName>
    <label>Strategic Value Levers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>