force-app/main/default/objects/Lead/fields/Third_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Name__c</fullName>
    <label>Third Party Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVA Involved</fullName>
            </value>
            <value>
                <fullName>PaymentsDays_ARG_2022</fullName>
            </value>
            <value>
                <fullName>Crosstechpayment_BR_2022</fullName>
            </value>
            <value>
                <fullName>Camp_CO_2022</fullName>
            </value>
            <value>
                <fullName>FintechAmericas_MI_2022</fullName>
            </value>
            <value>
                <fullName>FintechForum_CH_2022</fullName>
            </value>
            <value>
                <fullName>ColombiaFintech_CO_2022</fullName>
            </value>
            <value>
                <fullName>ChileFintechForum_CH_2022</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
                <isActive>false</isActive>
                <label>AE</label>
            </value>
            <value>
                <fullName>BDR</fullName>
                <isActive>false</isActive>
                <label>BDR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>