force-app/main/default/objects/Lead/fields/Time_for_business_Months__c.field-meta.xml
<CustomField>
    <fullName>Time_for_business_Months__c</fullName>
    <label>Time for business (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>