force-app/main/default/objects/Lead/fields/Timing__c.field-meta.xml
<CustomField>
    <fullName>Timing__c</fullName>
    <description>When do they expect to have a fully automated reconciliation process?</description>
    <inlineHelpText>When do they expect to have a fully automated reconciliation process?</inlineHelpText>
    <label>Timing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>