force-app/main/default/objects/Lead/fields/Timing_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Timing_Issue_Date__c</fullName>
    <inlineHelpText>Scheduled date for new contact</inlineHelpText>
    <label>Timing Issue Date</label>
    <type>Date</type>
</CustomField>