force-app/main/default/objects/Lead/fields/Timing_Issue_Obs__c.field-meta.xml
<CustomField>
    <fullName>Timing_Issue_Obs__c</fullName>
    <inlineHelpText>Record the observations related to the reason for defining the lead in Timing Issue status</inlineHelpText>
    <label>Timing Issue Obs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>