force-app/main/default/objects/Lead/fields/Vendor_validation__c.field-meta.xml
<CustomField>
    <fullName>Vendor_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Executive Validation</label>
    <type>Checkbox</type>
</CustomField>