force-app/main/default/objects/Lead/fields/What_Industry_for_other__c.field-meta.xml
<CustomField>
    <fullName>What_Industry_for_other__c</fullName>
    <inlineHelpText>If you selected Other in the before field, type your Industry</inlineHelpText>
    <label>What Industry for Other</label>
    <length>150</length>
    <type>Text</type>
</CustomField>