force-app/main/default/objects/Lead/recordTypes/Simetrik.recordType-meta.xml
<RecordType>
    <fullName>Simetrik</fullName>
    <active>true</active>
    <businessProcess>Simetrik</businessProcess>
    <label>Simetrik</label>
</RecordType>