force-app/main/default/objects/Lead/validationRules/Custom_Conversion_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Conversion_Only</fullName>
    <active>true</active>
    <description>Ensures that a lead is converted using the custom quick action.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Simetrik&quot;,
ISPICKVAL( Status , &quot;Approved&quot;), 
NOT( AllowConversion__c ) )</errorConditionFormula>
    <errorMessage>Please use the Convert button located in the page header.</errorMessage>
</ValidationRule>