force-app/main/default/objects/Lead/validationRules/Depp_Dive.validationRule-meta.xml
<ValidationRule>
    <fullName>Depp_Dive</fullName>
    <active>false</active>
    <description>Validates that at least one meeting of the Deepening type has been registered</description>
    <errorConditionFormula>AND( ISPICKVAL( Status , &quot;Deep Dive&quot;) , 
     OR( ISNULL(Deepmeet__c  ), Deepmeet__c  = 0) )</errorConditionFormula>
    <errorMessage>You must register at least one meeting of type Deepening to pass the Lead to Deep Dive status</errorMessage>
</ValidationRule>