force-app/main/default/objects/Lead/validationRules/Do_not_move_to_Inbound.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_move_to_Inbound</fullName>
    <active>true</active>
    <description>Inbound status is only for Admin</description>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Inbound_Lead&quot;),  $Profile.Name&lt;&gt;&quot;System Administrator&quot;)</errorConditionFormula>
    <errorMessage>Cannot move to Inbound status, Please move to another status</errorMessage>
</ValidationRule>